--- a/DDAYGO/ViewController/My/StoreManagement/ZP_YueTixian/ZP_ExtractHomePage/ZP_ExtractController.xib
+++ b/DDAYGO/ViewController/My/StoreManagement/ZP_YueTixian/ZP_ExtractHomePage/ZP_ExtractController.xib
@@ -23,6 +23,10 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="F3K-Nj-qOY">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="sKI-BC-pHo"/>
+                        <outlet property="delegate" destination="-1" id="xXq-mD-f7b"/>
+                    </connections>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
