--- a/DDAYGO/ViewController/My/StoreManagement/QrCode/Cell/ReceivingViewCell.xib
+++ b/DDAYGO/ViewController/My/StoreManagement/QrCode/Cell/ReceivingViewCell.xib
@@ -1,60 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="331" id="KGk-i7-Jjw" customClass="ReceivingViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="312" height="344"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="296" id="KGk-i7-Jjw" customClass="ReceivingViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="312" height="309"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="312" height="343.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="312" height="308.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_code" translatesAutoresizingMaskIntoConstraints="NO" id="gYJ-s1-uzD">
-                        <rect key="frame" x="66" y="65" width="23" height="23"/>
+                        <rect key="frame" x="66" y="29" width="20" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="23" id="cIf-AL-uKS"/>
+                            <constraint firstAttribute="height" constant="20" id="3Ky-kk-TUr"/>
+                            <constraint firstAttribute="width" constant="20" id="cem-kn-6WA"/>
                         </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_frame" translatesAutoresizingMaskIntoConstraints="NO" id="5g5-OP-le0">
-                        <rect key="frame" x="47" y="97" width="218" height="208"/>
-                    </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ydd-dV-fSA">
-                        <rect key="frame" x="66" y="117" width="180" height="168"/>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="扫二维码向我付款" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rz8-e3-qol">
-                        <rect key="frame" x="95" y="67" width="123" height="18"/>
+                        <rect key="frame" x="100" y="29" width="123" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="bCI-Jx-21a"/>
+                            <constraint firstAttribute="width" constant="123" id="qND-l9-XrX"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_frame" translatesAutoresizingMaskIntoConstraints="NO" id="5g5-OP-le0">
+                        <rect key="frame" x="46" y="57" width="220" height="220"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="220" id="PHv-Cr-P73"/>
+                            <constraint firstAttribute="width" constant="220" id="hj5-jb-qMM"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ydd-dV-fSA">
+                        <rect key="frame" x="66" y="77" width="180" height="180"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="180" id="AZb-oN-5VI"/>
+                            <constraint firstAttribute="width" constant="180" id="lrM-O8-9aM"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="rz8-e3-qol" firstAttribute="leading" secondItem="gYJ-s1-uzD" secondAttribute="trailing" constant="6" id="Fc6-Im-Pcq"/>
-                    <constraint firstItem="5g5-OP-le0" firstAttribute="centerX" secondItem="ydd-dV-fSA" secondAttribute="centerX" id="GRV-Uh-K5U"/>
-                    <constraint firstItem="gYJ-s1-uzD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="57" id="PQg-XU-NKd"/>
-                    <constraint firstItem="ydd-dV-fSA" firstAttribute="top" secondItem="gYJ-s1-uzD" secondAttribute="bottom" constant="29" id="QIZ-fJ-ZeR"/>
-                    <constraint firstItem="5g5-OP-le0" firstAttribute="centerX" secondItem="rz8-e3-qol" secondAttribute="centerX" id="S1R-jg-FMZ"/>
-                    <constraint firstItem="gYJ-s1-uzD" firstAttribute="centerY" secondItem="rz8-e3-qol" secondAttribute="centerY" id="acn-4B-Dej"/>
-                    <constraint firstItem="gYJ-s1-uzD" firstAttribute="leading" secondItem="ydd-dV-fSA" secondAttribute="leading" id="af6-Ip-WoM"/>
-                    <constraint firstItem="5g5-OP-le0" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="iKl-ry-2ra"/>
-                    <constraint firstItem="5g5-OP-le0" firstAttribute="top" secondItem="gYJ-s1-uzD" secondAttribute="bottom" constant="9" id="kop-Uo-N6i"/>
-                    <constraint firstItem="5g5-OP-le0" firstAttribute="centerY" secondItem="ydd-dV-fSA" secondAttribute="centerY" id="oh9-w6-RM6"/>
+                    <constraint firstItem="gYJ-s1-uzD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="18" id="AEw-Kj-m63"/>
+                    <constraint firstItem="rz8-e3-qol" firstAttribute="leading" secondItem="gYJ-s1-uzD" secondAttribute="trailing" constant="14" id="BMT-a6-R8W"/>
+                    <constraint firstItem="ydd-dV-fSA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="50" id="O3d-7t-S5o"/>
+                    <constraint firstItem="5g5-OP-le0" firstAttribute="top" secondItem="gYJ-s1-uzD" secondAttribute="bottom" constant="8" id="SVw-bw-QJw"/>
+                    <constraint firstItem="rz8-e3-qol" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="18" id="Sg8-eY-vd9"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="5g5-OP-le0" secondAttribute="trailing" constant="30" id="Y0u-4j-yXk"/>
+                    <constraint firstItem="5g5-OP-le0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="30" id="azB-Gm-Nbi"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="ydd-dV-fSA" secondAttribute="trailing" constant="50" id="sZB-cK-bEB"/>
+                    <constraint firstItem="gYJ-s1-uzD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="50" id="wNQ-Sm-x3n"/>
+                    <constraint firstItem="ydd-dV-fSA" firstAttribute="top" secondItem="gYJ-s1-uzD" secondAttribute="bottom" constant="28" id="wxT-w5-1bg"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="imageview" destination="ydd-dV-fSA" id="i9G-fe-VdS"/>
             </connections>
-            <point key="canvasLocation" x="30" y="-39"/>
+            <point key="canvasLocation" x="-35" y="-43.5"/>
         </tableViewCell>
     </objects>
     <resources>
